include/maplibre_native_c/camera.h

/** Starts an ordered free-camera query. */
MLN_API mln_status mln_map_get_free_camera_options_start(
  mln_map map, mln_operation* out_operation
) MLN_NOEXCEPT;
/** Takes free-camera options exactly once. */
MLN_API mln_status mln_map_get_free_camera_options_take_result(
  mln_operation operation, mln_free_camera_options* out_options
) MLN_NOEXCEPT;
/** Submits a copied free-camera command. */
MLN_API mln_status mln_map_set_free_camera_options(
  mln_map map, const mln_free_camera_options* options, uint64_t* out_command_id
) MLN_NOEXCEPT;
/**
 * Submits copied axonometric rendering option fields.
 *
 * Only fields selected by mode->fields affect the map. Unspecified fields keep
 * their current native values. out_command_id must point to zero. On success,
 * it receives the command's monotonic runtime order. The terminal disposition
 * arrives through the runtime event stream.
 */
MLN_API mln_status mln_map_set_projection_mode(
  mln_map map, const mln_projection_mode* mode, uint64_t* out_command_id
) MLN_NOEXCEPT;
/**
 * Starts an ordered conversion from a geographic coordinate to a screen point.
 */
MLN_API mln_status mln_map_pixel_for_lat_lng_start(
  mln_map map, mln_lat_lng coordinate, mln_operation* out_operation
) MLN_NOEXCEPT;
/** Takes the screen point from a completed operation exactly once. */
MLN_API mln_status mln_map_pixel_for_lat_lng_take_result(
  mln_operation operation, mln_screen_point* out_point
) MLN_NOEXCEPT;
/**
 * Starts an ordered conversion from a screen point to a geographic coordinate.
 */
MLN_API mln_status mln_map_lat_lng_for_pixel_start(
  mln_map map, mln_screen_point point, mln_operation* out_operation
) MLN_NOEXCEPT;
/** Takes the coordinate from a completed operation exactly once. */
MLN_API mln_status mln_map_lat_lng_for_pixel_take_result(
  mln_operation operation, mln_lat_lng* out_coordinate
) MLN_NOEXCEPT;
/**
 * Starts an ordered conversion of copied coordinates to screen points.
 */
MLN_API mln_status mln_map_pixels_for_lat_lngs_start(
  mln_map map, const mln_lat_lng* coordinates, size_t coordinate_count,
  mln_operation* out_operation
) MLN_NOEXCEPT;
/**
 * Copies converted points from a completed operation and consumes the result.
 *
 * out_point_count receives the required count before capacity is checked. A
 * capacity error leaves the result available for a retry.
 */
MLN_API mln_status mln_map_pixels_for_lat_lngs_take_result(
  mln_operation operation, mln_screen_point* out_points, size_t point_capacity,
  size_t* out_point_count
) MLN_NOEXCEPT;
/**
 * Starts an ordered conversion of copied screen points to coordinates.
 */
MLN_API mln_status mln_map_lat_lngs_for_pixels_start(
  mln_map map, const mln_screen_point* points, size_t point_count,
  mln_operation* out_operation
) MLN_NOEXCEPT;
/**
 * Copies converted coordinates and consumes the completed operation result.
 *
 * out_coordinate_count receives the required count before capacity is checked.
 * A capacity error leaves the result available for a retry.
 */
MLN_API mln_status mln_map_lat_lngs_for_pixels_take_result(
  mln_operation operation, mln_lat_lng* out_coordinates,
  size_t coordinate_capacity, size_t* out_coordinate_count
) MLN_NOEXCEPT;